Show barcode data

--- a/src/backend/InvenTree/templates/barcode_data.html
+++ b/src/backend/InvenTree/templates/barcode_data.html
@@ -3,8 +3,8 @@
 <tr>
     <td><span class='fas fa-barcode'></span></td>
     <td>{% trans "Barcode Identifier" %}</td>
-    <td {% if instance.barcode_data %}title='{{ instance.barcode_data }}'{% endif %}>
-        {{ instance.barcode_hash }}
+    <td {% if instance.barcode_data %}title='{{ instance.barcode_hash }}'{% endif %}>
+        {{ instance.barcode_data }}
     </td>
 </tr>
 {% endif %}
